# ulillilliaistic-aim-trainer-sdl

./: .gitignore  CMakeLists.txt  copy_res.cmake
include/: game.hpp  prop.hpp  render_helper.hpp  stage.hpp  text.hpp  text_prop.hpp
lib/SDL_image/VisualC/: SDL_image.vcxproj  SDL_image.vcxproj.filters
src/: game.cpp  main.cpp  text.cpp  text_prop.cpp
